# Nvy

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Nvy.sln  README.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml  commit-ci.yml
Nvy/: Nvy.vcxproj  Nvy.vcxproj.filters
Nvy/src/: main.cpp  pch.h
Nvy/src/common/: dx_helper.h  mpack_helper.h  vec.h
Nvy/src/nvim/: mpack_helper.h  nvim.cpp  nvim.h
Nvy/src/renderer/: glyph_renderer.cpp  glyph_renderer.h  renderer.cpp  renderer.h
resources/: version_info.rc.in
src/: main.cpp
src/common/: dx_helper.h  mpack_helper.h  scoped_exit.hpp  vec.h  window_messages.h
src/nvim/: nvim.cpp  nvim.h
src/renderer/: glyph_renderer.cpp  glyph_renderer.h  renderer.cpp  renderer.h
